--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -252,8 +252,8 @@
         "advantage": {
           "promo": "Des promos exceptionnelles !",
           "deliveryPass": "Des livraisons gratuites à des heures précises ! Les fameux Hot hours !",
-          "faithfull": "Des points de fidélités qui vous donnent le sourire",
-          "birthdate": "Privatisez la salle pour vos anniversaires, n'est-ce pas magique ? "
+          "faithfull": "Des points de fidélités qui vous donnent le sourire !",
+          "birthdate": "Privatisez la salle pour vos anniversaires, n'est-ce pas magique ?"
         }
       },
       "guess": {
